--- a/app/src/main/res/layout/activity_consultar_factura.xml
+++ b/app/src/main/res/layout/activity_consultar_factura.xml
@@ -34,5 +34,14 @@
             android:paddingTop="16dp"
             android:textSize="16sp" />
 
+        <ListView
+            android:id="@+id/listaDetallesFactura"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="1dp"
+            />
+
     </LinearLayout>
 </ScrollView>
