--- a/app/src/main/res/layout/activity_insertar_factura.xml
+++ b/app/src/main/res/layout/activity_insertar_factura.xml
@@ -9,22 +9,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- ID Factura -->
-        <EditText
-            android:id="@+id/edtIdFactura"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ID Factura"
-            android:maxLength="4"
-            android:inputType="text" />
-
         <!-- ID Consulta -->
         <EditText
             android:id="@+id/edtIdConsulta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ID Consulta"
-            android:maxLength="4"
             android:inputType="text"
             android:layout_marginTop="8dp" />
 
@@ -33,9 +23,11 @@
             android:id="@+id/edtFechaFactura"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Fecha de Factura (YYYY-MM-DD)"
+            android:hint="Fecha de Factura (dd/mm/aaaa)"
+
             android:inputType="date"
             android:layout_marginTop="8dp" />
+
 
         <!-- Botón Guardar -->
         <Button
