--- a/app/src/main/res/layout/activity_consultar_consulta.xml
+++ b/app/src/main/res/layout/activity_consultar_consulta.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="16dp"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Campo para escribir el nombre del paciente -->
-    <EditText
-        android:id="@+id/edtNombrePacienteBuscar"
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Nombre del Paciente"
-        android:inputType="text" />
+        android:layout_height="wrap_content">
 
-    <!-- Botón para buscar -->
-    <Button
-        android:id="@+id/btnBuscarConsulta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Buscar Consulta"
-        android:layout_marginTop="16dp"/>
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seleccione ID de la Consulta:" />
 
-    <!-- Resultado (puede ser un TextView o ListView si hay varios resultados) -->
-    <TextView
-        android:id="@+id/txtResultadoConsulta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Resultado:"
-        android:layout_marginTop="24dp"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
+        <Spinner
+            android:id="@+id/spinnerIdConsulta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btnBuscarConsulta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Buscar" />
+
+        <TextView
+            android:id="@+id/txtResultadoConsulta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:paddingTop="20dp"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+</ScrollView>
