--- a/app/src/main/res/layout/activity_eliminar_consulta.xml
+++ b/app/src/main/res/layout/activity_eliminar_consulta.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <!-- Campo para ingresar el ID de la consulta a eliminar -->
-    <EditText
-        android:id="@+id/edtIdConsultaEliminar"
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="ID de la Consulta a Eliminar"
-        android:maxLength="4"
-        android:inputType="text"/>
+        android:layout_height="wrap_content">
 
-    <!-- Botón para eliminar -->
-    <Button
-        android:id="@+id/btnEliminarConsulta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Eliminar Consulta"
-        android:layout_marginTop="16dp"/>
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Seleccione ID de la Consulta a eliminar:" />
 
-</LinearLayout>
+        <Spinner
+            android:id="@+id/spinnerEliminarConsulta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/btnEliminarConsulta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Eliminar Consulta" />
+
+    </LinearLayout>
+</ScrollView>
