--- a/app/src/main/res/layout/activity_actualizar_hospitalizacion.xml
+++ b/app/src/main/res/layout/activity_actualizar_hospitalizacion.xml
@@ -5,28 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Spinner android:id="@+id/spinnerIdHospitalizacion"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ID Hospitalización"
+        android:textStyle="bold"
+        android:paddingBottom="4dp"/>
+
+    <Spinner
+        android:id="@+id/spinnerIdHospitalizacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Spinner android:id="@+id/spinnerPaciente"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ID Paciente"
+        android:textStyle="bold"
+        android:paddingTop="12dp"
+        android:paddingBottom="4dp"/>
+
+    <Spinner
+        android:id="@+id/spinnerPaciente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText android:id="@+id/editTextFechaIngreso"
+    <EditText
+        android:id="@+id/editTextFechaIngreso"
         android:hint="Fecha Ingreso"
         android:focusable="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingTop="12dp"/>
 
-    <EditText android:id="@+id/editTextFechaAlta"
+    <EditText
+        android:id="@+id/editTextFechaAlta"
         android:hint="Fecha Alta"
         android:focusable="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"/>
 
-    <Button android:id="@+id/btnActualizar"
+    <Button
+        android:id="@+id/btnActualizar"
         android:text="Actualizar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"/>
 </LinearLayout>
