--- a/app/src/main/res/layout/activity_insertar_clinica.xml
+++ b/app/src/main/res/layout/activity_insertar_clinica.xml
@@ -32,8 +32,12 @@
             android:id="@+id/spinnerDistrito"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp" />
+            android:layout_margin="12dp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seleccione Especialidades:" />
         <Spinner
             android:id="@+id/spinnerEspecialidad"
             android:layout_width="match_parent"
