--- a/app/src/main/res/layout/activity_actualizar_detalle.xml
+++ b/app/src/main/res/layout/activity_actualizar_detalle.xml
@@ -39,6 +39,12 @@
         android:layout_marginBottom="8dp" />
 
     <!-- Spinner para seleccionar medicamento -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seleccione medicamento a agregar"
+        android:textSize="16sp" />
+
     <Spinner
         android:id="@+id/spinnerMedicamentos"
         android:layout_width="match_parent"
