--- a/app/src/main/res/layout/activity_consultar_detalle.xml
+++ b/app/src/main/res/layout/activity_consultar_detalle.xml
@@ -4,7 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="24dp">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lista de detalles de factura:"
+        android:textSize="16sp" />
     <ListView
         android:id="@+id/listViewDetalles"
         android:layout_width="match_parent"
