--- a/app/src/main/res/layout/activity_insertar_doctor.xml
+++ b/app/src/main/res/layout/activity_insertar_doctor.xml
@@ -21,8 +21,7 @@
         android:id="@+id/tvEspecialidad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ESPECIALIDAD"
-        android:textStyle="bold"
+        android:text="Especialidad"
         android:textSize="16sp"
         android:layout_marginTop="16dp" />
 
