--- a/app/src/main/res/layout/activity_insertar_aseguradora.xml
+++ b/app/src/main/res/layout/activity_insertar_aseguradora.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:hint="ID Aseguradora"
         android:maxLength="4"
-        android:inputType="text"/>
+        android:inputType="number"/>
 
     <EditText
         android:id="@+id/etNombre"
