--- a/app/src/main/res/layout/activity_insertar_clinica.xml
+++ b/app/src/main/res/layout/activity_insertar_clinica.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ID Clínica"
+            android:maxLength="4"
             android:inputType="number" />
 
         <EditText
